test/Vehicle/Test/CompileMode/Error/TypingErrors/indexOutOfBoundsUnknown.vcl
outOfBounds : Tensor Nat [n] -> Nat
outOfBounds x = x ! 1